[squash] Fixes secondary toolbar variable name

--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -144,7 +144,7 @@
      * Secondary toolbar styles.
      */
     &_secondary {
-        background-color: $secToolbarBackground;
+        background-color: $secondaryToolbarBg;
         position: absolute;
         align-items: center;
         box-sizing: border-box;
@@ -171,7 +171,7 @@
         }
 
         .button.toggled:not(.icon-raised-hand):not(.button-active) {
-            background: $secToolbarBackground;
+            background: $secondaryToolbarBg;
             cursor: pointer;
             text-decoration: none;
 
